# visual_manipulation

./: pyproject.toml
source/: copy_.py  cv2_haar_front_facial_recognition.py  desktop_interaction.py  image_recognition.py  main.py  template_recognition.py  timer.py
