[tool.poetry]
name = "desktopautomation"
version = "0.1.0"
description = ""
authors = ["Joshua Dunnink <Joshua.Dunnink@ing.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyAutoGUI = "^0.9.52"
Pillow = "^8.2.0"
opencv-python = "^4.5.2"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
